# ETL_Python_DuckDB_e_Docker

./: Dockerfile  README.md  app.py  duckdb.db  pipeline_00.py  pipeline_01.py  pipeline_02.py  pipeline_final.py  pyproject.toml  requirements.txt
